# DocsAgent

./: README.md  pyproject.toml
apps/cli/: main.py
apps/server/: main.py
apps/server/api/v1/: hello.py
apps/server/core/: app.py
core/: model_registry.py  settings.py
ingestion/: scanner.py
models/: base.py  ollama.py
vector/backends/: memory.py
