[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-docs"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer[all]>=0.12",
    "chromadb>=1.3.5",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
doc-agent = "apps.cli.main:main"

[tool.setuptools]
package-dir = {"" = "."}
